kubernetes/_general/routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: eg
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/common-name: ""
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: 'programme.lv'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: letsencrypt-nginx-proglv
    - name: veronika-https
      protocol: HTTPS
      port: 443
      hostname: 'veronika.programme.lv'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: letsencrypt-nginx-veronika-proglv
    - name: rmq
      protocol: TLS
      port: 5672
      hostname: 'programme.lv'
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: letsencrypt-nginx-proglv
    - name: rmq-raw
      protocol: TCP
      port: 5671
    - name: director-grpc
      protocol: TLS
      port: 555
      hostname: 'programme.lv'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: letsencrypt-nginx-proglv
    - name: director-grpc-raw
      protocol: TCP
      port: 554
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: programme-veronika-http-redirect
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: http
  hostnames:
    - "veronika.programme.lv"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: programme-veronika-http-redirect-constructor
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: veronika-https
  hostnames:
    - "veronika.programme.lv"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /tasks/list
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /constructor/list
        statusCode: 302

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: programme-veronika-backend-route
  namespace: proglv
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: veronika-https
  hostnames:
    - "veronika.programme.lv"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: ''
      backendRefs:
      - name: veronikabackend 
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: programme-veronika-frontend-route
  namespace: proglv
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: veronika-https
  hostnames:
    - "veronika.programme.lv"
  rules:
    - backendRefs:
      - name: veronikafrontend 
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: programme-http-redirect
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: http
  hostnames:
    - "programme.lv"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: programme-backend-route
  namespace: proglv
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: https
  hostnames:
    - "programme.lv"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /api
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: ''
      backendRefs:
      - name: backend 
        port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: programme-frontend-route
  namespace: proglv
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: https
  hostnames:
    - "programme.lv"
  rules:
    - backendRefs:
      - name: frontend 
        port: 80

---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: programme-rmq-raw-route
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: rmq-raw
  rules:
    - backendRefs:
      - name: rmq-cluster
        port: 5672
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: programme-rmq-tls-route
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: rmq
  rules:
    - backendRefs:
      - name: rmq-cluster
        port: 5672
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: programme-director-grpc-route
  namespace: proglv
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: director-grpc
  rules:
    - backendRefs:
      - name: director
        port: 50051
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: programme-director-grpc-route-raw
  namespace: proglv
  labels:
    gateway: programme-gateway
spec:
  parentRefs:
  - name: eg
    namespace: default
    sectionName: director-grpc-raw
  rules:
    - backendRefs:
      - name: director
        port: 50051
